add_subdirectory(DelegateModule)
add_subdirectory(LaunchModule)
add_subdirectory(InjectionModule/Core)
add_subdirectory(InjectionModule/EngineInjection)
add_subdirectory(DebugModule)
add_subdirectory(EventBusModule/Core)
add_subdirectory(EventBusModule/Engine)
add_subdirectory(EngineLoopModule)
add_subdirectory(CoreModule/CommonCore)
add_subdirectory(CoreModule/Installation)

if(WIN32)
    add_subdirectory(CoreModule/WindowsCore)
else()
    add_subdirectory(CoreModule/MockCore)
endif()

add_subdirectory(WindowProviderModule/Core)
add_subdirectory(WindowProviderModule/Installation)

if(WIN32 OR APPLE OR UNIX)
    add_subdirectory(WindowProviderModule/DesktopProviders)
else()
    add_subdirectory(WindowProviderModule/MockProvider)
endif()

add_subdirectory(RenderHardwareModule/Core)
if(WIN32)
    add_subdirectory(RenderHardwareModule/WindowsCore)
else()
    add_subdirectory(RenderHardwareModule/MockCore)
endif()

add_subdirectory(RenderHardwareModule/Installation)
add_subdirectory(RenderHardwareModule/Vulkan)
add_subdirectory(ConcurrencyModule/Core)

if(WIN32)
    add_subdirectory(ConcurrencyModule/Windows)
else()
    add_subdirectory(ConcurrencyModule/Mock)
endif()

add_subdirectory(MemoryModule)
add_subdirectory(ConcurrencyModule/Installation)
add_subdirectory(RenderModule/Threading)
add_subdirectory(ConcurrencyModule/SynchronizationCommon)
add_subdirectory(ConcurrencyModule/CommandBuffers)
add_subdirectory(ConcurrencyModule/WorldAbstraction)
add_subdirectory(ConcurrencyModule/ControlSystems)
add_subdirectory(ComponentBehaviourModule/Core)
add_subdirectory(ComponentBehaviourModule/World)
add_subdirectory(MathModule)
add_subdirectory(SceneModule/Core)
add_subdirectory(SceneModule/World)
add_subdirectory(RenderModule/Core)